Fix: logout button is no longer shifted down.

--- a/less/settingspane.less
+++ b/less/settingspane.less
@@ -186,3 +186,7 @@
 .logged-user-name {
   font-weight: bold;
 }
+
+.logged-label {
+  width: 150px;
+}
